Hack to ensure the visibility of privacy item

--- a/src/styl/consent.styl
+++ b/src/styl/consent.styl
@@ -80,6 +80,10 @@
     .safe-area {
       padding: 0;
     }
+
+    .empty-block {
+      height: 6 * $default-size;
+    }
   }
 
   .safe-area {
@@ -222,10 +226,11 @@
     $switch-group-container();
     margin-top: .5 * $default-size;
   }
-
+  .empty-block {
+    height: 5 * $default-size;
+  }
   .privacy-container {
     #privacy-row-item-container {
-      padding-bottom: 6 * $default-size;
       .row-item {
         margin: 0 0 0 0;
         padding: $default-size 0;
